--- a/headline.html
+++ b/headline.html
@@ -99,7 +99,9 @@
             Pour l’interdiction des interpellations policières une bonne fois pour toute
         </h1>
         <article>
-            <p> Montréal, le 4 septembre 2024 — La Ligue des droits et libertés (LDL) salue la décision rendue par la
+            <p> <b>Montréal, le 4 septembre 2024</b> — La Ligue des droits et libertés (LDL) salue la <span
+                    style="color: #b20838; text-decoration: underline; font-weight: bolder;">décision</span> rendue par
+                la
                 juge
                 Dominique Poulin de la Cour supérieure ainsi que la démarche d’action collective intentée par la Ligue
                 des
@@ -131,6 +133,8 @@
             <br>
             <br>
             <p>
+            </article>
+            <article>
                 La LDL rappelle que les policiers n’ont pas le pouvoir au Québec de faire des interpellations en vertu
                 de la loi ou de la common law. Les interpellations policières bafouent les droits et libertés de toute
                 personne et sont une source connue et documentée de profilages racial et social systémiques. Les
@@ -150,13 +154,42 @@
                 La LDL exhorte la Ville de Montréal à ne pas faire appel de ce jugement et à y donner suite de façon
                 urgente en interdisant aux policiers du SPVM de faire des interpellations.
             </p>
+            </article>
+            <br>
+            <article>
+            <h3>
+                Faits saillants
+            </h3>
+            <p>
+                Une interpellation (<i>street check</i>) est un <b>contrôle d’identité arbitraire</b> dans l’espace
+                public. C’est une
+                situation où un policier <b>tente</b> d’obtenir l’identité d’une personne et de recueillir des
+                informations
+                auprès d’elle, alors que la personne n’a <b>aucune obligation légale</b> de s’identifier, ni de répondre
+                aux
+                questions. Les informations peuvent ensuite être enregistrées par le policier dans une base de données à
+                des fins de renseignements policiers, ce qui constitue une collecte abusive d’informations. Dans le
+                langage commun, il arrive souvent que le mot<b><i>interpellation</i></b> soit utilisé pour nommer tous
+                les types
+                d’interaction avec la police, incluant l’interception d’automobilistes, l’arrestation ou la détention.
+                Cette situation est souvent une cause de confusion dans le débat public sur les interpellations.
+            </p>
+            <br>
+            <p>
+                <a href="https://liguedesdroits.ca/campagne-interdiction-interpellations-policieres/"
+                    target="_blank"><i><u><b>L’outil 10 Questions et réponses</b></u></i></a> publié en février 2023
+                permet de clarifier le sens que donnent les
+                services de police au mot interpellation, tout en expliquant pourquoi il est nécessaire d’interdire
+                formellement cette pratique policière arbitraire.
+            </p>
         </article>
     </section>
-    <section class="pagination-wrapper">
-        <div class="pagination">
-            <button class="prev" aria-label="Previous">Previous</button>
-            <div class="divider"></div>
-            <button class="next" aria-label="Next">Next</button>
+    <!-- pagination -->
+    <section class="nextprev-wrapper" style="background-color: black;">
+        <div class="nextprev-wrapper__container">
+            <button class="nextprev-wrapper__prev" aria-label="Previous">Article précédente</button>
+            <div class="nextprev-wrapper__divider"></div>
+            <button class="nextprev-wrapper__next" aria-label="Next">Article suivante</button>
         </div>
 
     </section>
@@ -224,4 +257,5 @@
     <script src="swiper.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=maps,marker&v=beta" defer></script>
 </body>
