--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet"
     href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
