--- a/wp-content/themes/theme-the-boyzs/html/headline.html
+++ b/wp-content/themes/theme-the-boyzs/html/headline.html
@@ -254,8 +254,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="swiper.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=maps,marker&v=beta" defer></script>
 </body>
