--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -183,7 +183,6 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="swiper.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
