--- a/wp-content/themes/theme-the-boyzs/html/team.html
+++ b/wp-content/themes/theme-the-boyzs/html/team.html
@@ -200,7 +200,6 @@
     </footer>
     <!-- Champ des scripts-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="swiper.js" ></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
     </body>
