continuation page equipe

--- a/wp-content/themes/theme-the-boyzs/html/team.html
+++ b/wp-content/themes/theme-the-boyzs/html/team.html
@@ -84,6 +84,15 @@
             </div>
         </div>
     </header>
+
+
+    <section>
+        <div class="equipe-container">
+            <div class="equipe__carte equipe__carte--1">
+
+            </div>
+        </div>
+    </section>
     
 
      <!-- Footer -->
