continuation page equipe

--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -293,7 +293,7 @@
                 <li><a link="#">Équipe</a></li>
                 <li><a link="#">Nouvelles</a></li>
                 <li><a link="#">À Propos</a></li>
-                <li><a link="#">Contant</a></li>
+                <li><a link="#">Contact</a></li>
                 <li><a link="#">FAQ</a></li>
             </ul>
             <hr>
