--- a/wp-content/themes/theme-the-boyzs/html/team.html
+++ b/wp-content/themes/theme-the-boyzs/html/team.html
@@ -89,7 +89,11 @@
     <section>
         <div class="equipe-container">
             <div class="equipe__carte equipe__carte--1">
-
+                <div class="equipe_container_texte">
+                    <img src="medias/equipes/perso1.png" alt="">
+                    <p>Alexandre Petitclerc</p>
+                    <p>Président</p>
+                </div>
             </div>
         </div>
     </section>
