--- a/wp-content/themes/theme-the-boyzs/html/about.html
+++ b/wp-content/themes/theme-the-boyzs/html/about.html
@@ -71,7 +71,7 @@
                     <ul class="nav-links">
                     <li><a class="nav-link" href="index.html">ACCUEIL</a></li>
                     <li><a  href="luttes.html">LUTTES</a></li>
-                    <li><a  href="teams.html">ÉQUIPE</a></li>
+                    <li><a  href="team.html">ÉQUIPE</a></li>
                     <li><a  href="news.html">NOUVELLES</a></li>
                     <li><a  href="about.html">À PROPOS</a></li>
                     <li><a  href="contact.html">CONTACT</a></li>
