--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -54,7 +54,7 @@
                 <ul class="nav-links">
                     <li><a class="nav-link__active" href="index.html">ACCUEIL</a></li>
                     <li><a class="nav-link" href="luttes.html">LUTTES</a></li>
-                    <li><a class="nav-link" href="teams.html">ÉQUIPE</a></li>
+                    <li><a class="nav-link" href="team.html">ÉQUIPE</a></li>
                     <li><a class="nav-link" href="news.html">NOUVELLES</a></li>
                     <li><a class="nav-link" href="about.html">À PROPOS</a></li>
                     <li><a class="nav-link" href="contact.html">CONTACT</a></li>
