--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -126,15 +126,15 @@
     <footer>
         <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
-            <img src="sources/medias/partners/casifq.png" alt="casifq">
-            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
-            <img src="sources/medias/partners/coalitionaidejuridique.png">
-            <img src="sources/medias/partners/fidh.jpg">
-            <img src="sources/medias/partners/iclmg-csilc.jpg">
-            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
-            <img src="sources/medias/partners/osp.png">
-            <img src="sources/medias/partners/rodcd_logo.png">
-            <img src="sources/medias/partners/rqaca.png">
+            <img src="medias/partners/casifq.png" alt="casifq">
+            <img src="medias/partners/bdsquebec-logo-email.jpg">
+            <img src="medias/partners/coalitionaidejuridique.png">
+            <img src="medias/partners/fidh.jpg">
+            <img src="medias/partners/iclmg-csilc.jpg">
+            <img src="medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="medias/partners/osp.png">
+            <img src="medias/partners/rodcd_logo.png">
+            <img src="medias/partners/rqaca.png">
         </div>
     </footer>
     <footer class="footer-wrapper">
