--- a/wp-content/themes/theme-the-boyzs/html/headline.html
+++ b/wp-content/themes/theme-the-boyzs/html/headline.html
@@ -185,7 +185,7 @@
         </article>
     </section>
     <!-- pagination -->
-    <section class="nextprev-wrapper" style="background-color: black;">
+    <section class="nextprev-wrapper" style="background-color: rgb(59, 59, 59);">
         <div class="nextprev-wrapper__container">
             <button class="nextprev-wrapper__prev" aria-label="Previous">Article précédente</button>
             <div class="nextprev-wrapper__divider"></div>
