ajout de style à la page headline

--- a/wp-content/themes/theme-the-boyzs/html/headline.html
+++ b/wp-content/themes/theme-the-boyzs/html/headline.html
@@ -94,11 +94,11 @@
         </div>
     </div>
     <section class="headline-wrapper">
-        <h1>
-            La Ville de Montréal condamnée pour profilage racial systémique
+        <h1 class="headline-title">
+            La Ville de Montréal condamnée pour profilage racial systémique<br>
             Pour l’interdiction des interpellations policières une bonne fois pour toute
         </h1>
-        <article>
+        <article class="news-article">
             <p> <b>Montréal, le 4 septembre 2024</b> — La Ligue des droits et libertés (LDL) salue la <span
                     style="color: #b20838; text-decoration: underline; font-weight: bolder;">décision</span> rendue par
                 la
@@ -156,7 +156,7 @@
             </p>
             </article>
             <br>
-            <article>
+            <article class="highlights">
             <h3>
                 Faits saillants
             </h3>
@@ -184,15 +184,15 @@
             </p>
         </article>
     </section>
-    <!-- pagination -->
-    <section class="nextprev-wrapper" style="background-color: rgb(59, 59, 59);">
-        <div class="nextprev-wrapper__container">
-            <button class="nextprev-wrapper__prev" aria-label="Previous">Article précédente</button>
-            <div class="nextprev-wrapper__divider"></div>
-            <button class="nextprev-wrapper__next" aria-label="Next">Article suivante</button>
-        </div>
+  <!-- Navigation entre articles -->
+<section class="nextprev-wrapper">
+    <div class="nextprev-wrapper__container">
+        <button class="nextprev-wrapper__prev" aria-label="Previous">Article précédent</button>
+        <div class="nextprev-wrapper__divider"></div>
+        <button class="nextprev-wrapper__next" aria-label="Next">Article suivant</button>
+    </div>
+</section>
 
-    </section>
     <!-- Footer -->
     <footer>
         <h1>LDL et nos Partenaires</h1>
