--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -86,15 +86,18 @@
 
     <div class="container">
         <ul class="container__pagination">
-            <li><a href="#">« Précédent</a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">Suivant »</a></li>
+          <li><a href="#">Previous</a></li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">6</a></li>
+          <li><a href="#">7</a></li>
+          <li><a href="#">8</a></li>
+          <li><a href="#">Next</a></li>
         </ul>
-    </div>
+      </div>
     <section class="news-wrapper">
         <div class="news-wrapper__news">
             
