--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -84,6 +84,31 @@
             </div>
         </header>
     </div>
+    <section>
+        <div class="page-wrapper">
+            <h2>Les comités de travail de la LDL sont les suivants :</h2>
+            <div class="committees">
+                <div class="committee-card">
+                    <span class="icon">$</span>
+                    <p class="title">Droits économiques sociaux et culturels</p>
+                </div>
+                <div class="committee-card">
+                    <span class="icon">👥</span>
+                    <p class="title">Droits des peuples autochtones</p>
+                </div>
+                <div class="committee-card">
+                    <span class="icon">❤️</span>
+                    <p class="title">Droit à la santé</p>
+                </div>
+            </div>
+            <button class="view-more">En voir plus</button>
+            <div class="pagination">
+                <button class="pagination-btn prev">←</button>
+                <span class="pagination-dots">...</span>
+                <button class="pagination-btn next">→</button>
+            </div>
+        </div>
+    </section>
      <!-- Footer -->
      <footer>
         <h1>LDL et nos Partenaires</h1>
