--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -84,21 +84,22 @@
         </header>
     </div>
 
-    <div class="container">
-        <ul class="container__pagination">
-          <li><a href="#">Previous</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">6</a></li>
-          <li><a href="#">7</a></li>
-          <li><a href="#">8</a></li>
-          <li><a href="#">Next</a></li>
-        </ul>
-      </div>
+    
     <section class="news-wrapper">
+        <div class="container" id="container-news">
+            <ul class="container__pagination">
+              <li><a href="#">Previous</a></li>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#">6</a></li>
+              <li><a href="#">7</a></li>
+              <li><a href="#">8</a></li>
+              <li><a href="#">Next</a></li>
+            </ul>
+        </div>
         <div class="news-wrapper__news">
             
         </div>
