--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="/sources/medias/ldl-icone.ico">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet"
     href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
     <link rel="stylesheet" href="../style.css">
@@ -89,15 +90,15 @@
             <h2>Les comités de travail de la LDL sont les suivants :</h2>
             <div class="committees">
                 <div class="committee-card">
-                    <span class="icon">$</span>
+                    <span class="icon"><i class="fas fa-dollar-sign"></i></span>
                     <p class="title">Droits économiques sociaux et culturels</p>
                 </div>
                 <div class="committee-card">
-                    <span class="icon">👥</span>
+                    <span class="icon"><i class="fas fa-users"></i></span>
                     <p class="title">Droits des peuples autochtones</p>
                 </div>
                 <div class="committee-card">
-                    <span class="icon">❤️</span>
+                    <span class="icon"><i class="fas fa-heart"></i></span>
                     <p class="title">Droit à la santé</p>
                 </div>
             </div>
