--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -90,15 +90,15 @@
             <h2>Les comités de travail de la LDL sont les suivants :</h2>
             <div class="committees">
                 <div class="committee-card">
-                    <span class="icon"><i class="fas fa-dollar-sign"></i></span>
+                    <span class="icon"><i class="fas fa-dollar-sign" style="font-size: 100px;"></i></span>
                     <p class="title">Droits économiques sociaux et culturels</p>
                 </div>
                 <div class="committee-card">
-                    <span class="icon"><i class="fas fa-users"></i></span>
+                    <span class="icon"><i class="fas fa-users" style="font-size: 100px;"></i></span>
                     <p class="title">Droits des peuples autochtones</p>
                 </div>
                 <div class="committee-card">
-                    <span class="icon"><i class="fas fa-heart"></i></span>
+                    <span class="icon"><i class="fas fa-heart" style="font-size: 100px;"></i></span>
                     <p class="title">Droit à la santé</p>
                 </div>
             </div>
