--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -106,6 +106,10 @@
         </div>
         <ul class="news-wrapper__list">
             <li>
+                <a href="headline.html">Pour l'interdiction des interpellations policières une bonne fois pour toute
+                </a>
+            </li>
+            <li>
                 <a href="https://liguedesdroits.ca/pinel-les-cas-complexes-crient-au-secours/">Pinel: Les cas complexes crient au secours!</a>
             </li>
             <li>
