--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="/sources/medias/ldl-icone.ico">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet"
     href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
     <link rel="stylesheet" href="../style.css">
