changement marie michelle
ajustement des chose quil fallait changer

--- a/wp-content/themes/theme-the-boyzs/html/about.html
+++ b/wp-content/themes/theme-the-boyzs/html/about.html
@@ -87,7 +87,7 @@
    
     <section>
         <div class="titreapropos">
-            <h1>À propos</h1>
+            <p class="h1">À propos</p>
         </div>
         <div class="descriptionapropos">
             <p>Voici l'histoire de la fondation de la Ligue des droits et libertés</p>
@@ -101,7 +101,7 @@
     </section>
      <!-- Footer -->
     <footer>
-        <h1>LDL et nos Partenaires</h1>
+        <p class="h1">LDL et nos Partenaires</p>
         <div class="footer-wrapper__partner">
             <img src="medias/partners/casifq.png" alt="casifq">
             <img src="medias/partners/bdsquebec-logo-email.jpg">
