--- a/wp-content/themes/theme-the-boyzs/html/headline.html
+++ b/wp-content/themes/theme-the-boyzs/html/headline.html
@@ -195,7 +195,7 @@
 
     <!-- Footer -->
     <footer>
-        <h1>LDL et nos Partenaires</h1>
+        <p class="h1">LDL et nos Partenaires</p>
         <div class="footer-wrapper__partner">
             <img src="medias/partners/casifq.png" alt="casifq">
             <img src="medias/partners/bdsquebec-logo-email.jpg">
