--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <section>
-        <h1 id="textcarte">À la une</h1>
+        <p class="h1" id="textcarte">À la une</p>
         <hr id="barrecarte">
         <div class="section-card">
             <a href="headline.html">
@@ -206,7 +206,7 @@
                 </div>
     </section>
     <section>
-        <h1 id="texttemoi">Témoignages</h1>
+        <p class="h1" id="texttemoi">Témoignages</p>
         <hr id="barretemoi">
         <div class="testimony-wrapper">
             <!--Témoignage 1-->
@@ -236,7 +236,7 @@
     </section>
    <section class="don">
     <!--ANIMATION TIMELAPSE ICI!!!!!!!!!-->
-        <h1>PARCE QUE LES DROITS HUMAINS, C'EST POUR TOUT LE MONDE</h1>
+        <p class="h1">PARCE QUE LES DROITS HUMAINS, C'EST POUR TOUT LE MONDE</p>
         <hr>
         <div class="don-wrapper">
             <article class="__description-don-wrapper">
