--- a/wp-content/themes/theme-the-boyzs/html/lutte.html
+++ b/wp-content/themes/theme-the-boyzs/html/lutte.html
@@ -89,7 +89,7 @@
         <section class="herolutte">
             <div>
                 <div class="titrelutte">
-                    <h1>Droit à la santé</h1>
+                    <p class="h1">Droit à la santé</p>
                 </div>
                 <div class="descriptionlutte">
                     <p>Nos luttes > Droit à la santé</p>
@@ -100,7 +100,7 @@
             <p>En plus de l’accès à des soins de santé en temps opportun, le droit à la santé implique l’adoption de politiques gouvernementales agissant sur les déterminants sociaux de la santé ayant un impact sur la santé et la participation de la population à la prise de toute décision.</p>
         </section>
         <section class="articleslutte">
-            <h1 id="textcarte">Articles liés</h1>
+            <p class="h1" id="textcarte">Articles liés</p>
                 <hr id="barrecarte">
                 <div class="section-card">
                     <a href="headline.html">
@@ -168,7 +168,7 @@
     </div>
      <!-- Footer -->
      <footer>
-        <h1>LDL et nos Partenaires</h1>
+        <p class="h1">LDL et nos Partenaires</p>
         <div class="footer-wrapper__partner">
             <img src="medias/partners/casifq.png" alt="casifq">
             <img src="medias/partners/bdsquebec-logo-email.jpg">
