--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -89,7 +89,7 @@
         <section>
             <div>
                 <div class="titrelutte">
-                    <h1>Nos luttes</h1>
+                    <p class="h1">Nos luttes</p>
                 </div>
                 <div class="descriptionlutte">
                     <p>Les comités de travail de la LDL sont les suivants :</p>
@@ -141,7 +141,7 @@
     </div>
      <!-- Footer -->
      <footer>
-        <h1>LDL et nos Partenaires</h1>
+        <p class="h1">LDL et nos Partenaires</p>
         <div class="footer-wrapper__partner">
             <img src="medias/partners/casifq.png" alt="casifq">
             <img src="medias/partners/bdsquebec-logo-email.jpg">
