--- a/wp-content/themes/theme-the-boyzs/html/contact.html
+++ b/wp-content/themes/theme-the-boyzs/html/contact.html
@@ -163,7 +163,7 @@
                     <input type="email" id="email" name="email"  required><br><br>
             
                     <label class="label-form" for="message">Message :</label><br>
-                    <textarea id="message" name="message" rows="4"  required></textarea><br><br>
+                    <textarea id="message" name="message" rows="9" cols="60"  required></textarea><br><br>
             
                     <button >Envoyer</button>
                 </div>
