--- a/wp-content/themes/theme-the-boyzs/html/news.html
+++ b/wp-content/themes/theme-the-boyzs/html/news.html
@@ -116,19 +116,23 @@
             <div class="liste-carte">
                 <a href="headline.html">Pour l'interdiction des interpellations policières une bonne fois pour toute
                 </a>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
             <div class="liste-carte">
                 <a href="https://liguedesdroits.ca/pinel-les-cas-complexes-crient-au-secours/">Pinel: Les cas complexes
                     crient au secours!</a>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
             <div class="liste-carte">
                 <a
                     href="https://liguedesdroits.ca/pour-linterdiction-des-interpellations-policieres-une-bonne-fois-pour-toute/">Pour
                     l’interdiction des interpellations
                     policières une bonne fois pour toute</a>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
             <div class="liste-carte">
                 <a>États généraux de la fonction public du Québec</a>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             </div>
             <!--
             <li>
