Ready for server

--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -194,7 +194,7 @@
                 </ul>
             </div>
             <div class="lutte-wrapper__right-section">
-                <img src="medias/—Pngtree—three fists up raised high_9140570 1.png" alt="Lutte image">
+                <img src="medias/Pngtree-three fists up raised high_9140570 1.png" alt="Lutte image">
             </div>
             
         </div>
