--- a/wp-content/themes/theme-the-boyzs/html/luttes.html
+++ b/wp-content/themes/theme-the-boyzs/html/luttes.html
@@ -161,11 +161,10 @@
                 <p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p>
             </span>
             <ul class="footer-wrapper__social-icons">
-                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a class="linkedin" href="https://fr.linkedin.com/company/liguedesdroits"><i
-                            class="fa fa-linkedin"></i></a></li>
+                <li><a class="facebook" href="https://www.facebook.com/LigueDesDroitsEtLibertes/"><i class="fa fa-facebook"></i></a></li>
+                <li><a class="twitter" href="https://x.com/liguedesdroits"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="instagram" href="https://www.instagram.com/liguedesdroits"><i class="fa fa-instagram"></i></a></li>
+                <li><a class="linkedin" href="https://fr.linkedin.com/company/liguedesdroits"><i class="fa fa-linkedin"></i></a></li>
             </ul>
         </div>
         <div>
