--- a/wp-content/themes/theme-the-boyzs/html/index.html
+++ b/wp-content/themes/theme-the-boyzs/html/index.html
@@ -39,8 +39,12 @@
                 <img class="logo" src="medias/ldl-logo-horizontale-270.png" alt="logoldl">
     
                 <div class="navbar-top__buttons">
-                    <button class="cta-button secondary">S'INFORMER</button>
-                    <button class="cta-button">DONNER</button>
+                    <button class="cta-button secondary">
+                        <i class="fa-solid fa-info-circle"></i> S'INFORMER
+                    </button>
+                    <button class="cta-button">
+                        <i class="fa-solid fa-hand-holding-heart"></i> DONNER
+                    </button>
                 </div>
             </div>
             <div class="hamburger">
